// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ECS IAM with minimal config 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"testECSService_ecs-task-assume_E7A7BA71\\": {
        \\"version\\": \\"2012-10-17\\",
        \\"statement\\": [
          {
            \\"effect\\": \\"Allow\\",
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"ecs-tasks.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testECSService/ecs-task-assume\\",
            \\"uniqueId\\": \\"testECSService_ecs-task-assume_E7A7BA71\\"
          }
        }
      }
    }
  },
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"testECSService_ecs-execution-role_46F1514F\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.testECSService_ecs-task-assume_E7A7BA71.json}\\",
        \\"name\\": \\"abides-dev-TaskExecutionRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testECSService/ecs-execution-role\\",
            \\"uniqueId\\": \\"testECSService_ecs-execution-role_46F1514F\\"
          }
        }
      },
      \\"testECSService_ecs-task-role_C04CE6DA\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.testECSService_ecs-task-assume_E7A7BA71.json}\\",
        \\"name\\": \\"abides-dev-TaskRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testECSService/ecs-task-role\\",
            \\"uniqueId\\": \\"testECSService_ecs-task-role_C04CE6DA\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"testECSService_ecs-task-execution-default-attachment_9FDF40D5\\": {
        \\"policy_arn\\": \\"someArn\\",
        \\"role\\": \\"\${aws_iam_role.testECSService_ecs-execution-role_46F1514F.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testECSService/ecs-task-execution-default-attachment\\",
            \\"uniqueId\\": \\"testECSService_ecs-task-execution-default-attachment_9FDF40D5\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders ECS IAM with tags 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"testECSService_ecs-task-assume_E7A7BA71\\": {
        \\"version\\": \\"2012-10-17\\",
        \\"statement\\": [
          {
            \\"effect\\": \\"Allow\\",
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"ecs-tasks.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testECSService/ecs-task-assume\\",
            \\"uniqueId\\": \\"testECSService_ecs-task-assume_E7A7BA71\\"
          }
        }
      }
    }
  },
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"testECSService_ecs-execution-role_46F1514F\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.testECSService_ecs-task-assume_E7A7BA71.json}\\",
        \\"name\\": \\"abides-dev-TaskExecutionRole\\",
        \\"tags\\": {
          \\"letsgo\\": \\"bowling\\",
          \\"donnie\\": \\"throwinrockstonight\\"
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testECSService/ecs-execution-role\\",
            \\"uniqueId\\": \\"testECSService_ecs-execution-role_46F1514F\\"
          }
        }
      },
      \\"testECSService_ecs-task-role_C04CE6DA\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.testECSService_ecs-task-assume_E7A7BA71.json}\\",
        \\"name\\": \\"abides-dev-TaskRole\\",
        \\"tags\\": {
          \\"letsgo\\": \\"bowling\\",
          \\"donnie\\": \\"throwinrockstonight\\"
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testECSService/ecs-task-role\\",
            \\"uniqueId\\": \\"testECSService_ecs-task-role_C04CE6DA\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"testECSService_ecs-task-execution-default-attachment_9FDF40D5\\": {
        \\"policy_arn\\": \\"someArn\\",
        \\"role\\": \\"\${aws_iam_role.testECSService_ecs-execution-role_46F1514F.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testECSService/ecs-task-execution-default-attachment\\",
            \\"uniqueId\\": \\"testECSService_ecs-task-execution-default-attachment_9FDF40D5\\"
          }
        }
      }
    }
  }
}"
`;
